
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {void* dwCurrentState; int dwWin32ExitCode; } ;
typedef int DWORD ;




 void* SERVICE_STOPPED ;
 TYPE_1__ ServiceStatus ;
 int SetServiceStatus (int ,TYPE_1__*) ;
 int hStatus ;

void ControlHandler(DWORD request) {
 switch (request) {
  case 128:
   ServiceStatus.dwWin32ExitCode = 0;
   ServiceStatus.dwCurrentState = SERVICE_STOPPED;
   SetServiceStatus(hStatus, &ServiceStatus);
  return;
  case 129:
   ServiceStatus.dwWin32ExitCode = 0;
   ServiceStatus.dwCurrentState = SERVICE_STOPPED;
   SetServiceStatus(hStatus, &ServiceStatus);
  return;
  default:
  break;
  }
 SetServiceStatus(hStatus, &ServiceStatus);

 return;
}
