; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_39843.c_ControlHandler.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_39843.c_ControlHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@ServiceStatus = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@SERVICE_STOPPED = common dso_local global i8* null, align 8
@hStatus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ControlHandler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %12 [
    i32 128, label %4
    i32 129, label %8
  ]

4:                                                ; preds = %1
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 8
  %5 = load i8*, i8** @SERVICE_STOPPED, align 8
  store i8* %5, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 8
  %6 = load i32, i32* @hStatus, align 4
  %7 = call i32 @SetServiceStatus(i32 %6, %struct.TYPE_3__* @ServiceStatus)
  br label %16

8:                                                ; preds = %1
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 8
  %9 = load i8*, i8** @SERVICE_STOPPED, align 8
  store i8* %9, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 8
  %10 = load i32, i32* @hStatus, align 4
  %11 = call i32 @SetServiceStatus(i32 %10, %struct.TYPE_3__* @ServiceStatus)
  br label %16

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12
  %14 = load i32, i32* @hStatus, align 4
  %15 = call i32 @SetServiceStatus(i32 %14, %struct.TYPE_3__* @ServiceStatus)
  br label %16

16:                                               ; preds = %13, %8, %4
  ret void
}

declare dso_local i32 @SetServiceStatus(i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
